# altgo

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.zh-CN.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  build.cmd  build.ps1  docs.html  index.html  install.ps1  install.sh  install_config.toml  sitemap.xml  test.m4a  test.raw
.github/actions/setup-linux-build/: action.yml
.github/workflows/: appimage.yml  ci.yml  deploy-docs.yml  release.yml
.mimocode/: .cron-lock
assets/css/: styles.f95cb450.css
assets/js/: 17896441.be084596.js  1df93b7f.1f506304.js  291fb608.28cac72f.js  2d692ae3.8c2d7f28.js  483f3cd1.152b1928.js  4bfdab7e.f3031161.js  83809050.0e760b87.js  ad0a9b4d.e638ac74.js  c179f821.86ec88a5.js  cbb899e4.308481e1.js  d11168db.d34e56c9.js  ea313555.11bde321.js  f8409a7e.18285033.js  fd532226.b7a8a4d2.js  main.03d7d074.js  runtime~main.1f22c2cf.js
configs/: altgo.toml
docs/: 2026-04-15-altgo-full-improvement.html  2026-04-15-docusaurus-docs-site.html  2026-04-15-tauri-react-gui.html  2026-04-16-fix-linux-clippy.html  2026-04-16-release-pipeline.html  README.md  architecture.html  configuration.html  faq.html  quick-start.html  usage.html
docs-site/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: 2026-04-15-docusaurus-docs-site.md  2026-04-15-tauri-react-gui.md  2026-04-16-fix-linux-clippy.md  architecture.mdx  configuration.mdx  faq.mdx  intro.mdx  quick-start.mdx  usage.mdx
docs-site/drafts/: 2026-04-15-altgo-full-improvement.md  2026-04-15-docusaurus-docs-site.md  2026-04-15-tauri-react-gui.md  2026-04-16-release-pipeline.md
docs-site/src/components/: Cards.module.css  Cards.tsx  MultiTabs.tsx
docs-site/src/css/: custom.css
docs-site/src/pages/: index.module.css  index.tsx
docs/adr/: 0001-restore-windows-support-plan.md  0001-restore-windows-support.md  0002-windows-key-listener-hook.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/superpowers/plans/: 2026-04-18-alt-key-listener-wayland-plan.md  2026-04-18-overlay-animation-plan.md  2026-04-19-appimage-packaging-plan.md  2026-04-20-drop-macos-support-plan.md  2026-04-23-multi-platform-release.md
docs/superpowers/specs/: 2026-04-18-alt-key-listener-wayland-design.md  2026-04-18-overlay-animation-design.md  2026-04-19-appimage-packaging-design.md  2026-04-19-documentation-update-design.md  2026-04-20-drop-macos-support-design.md  2026-04-21-code-review-design.md  2026-04-22-changelog-auto-design.md  2026-04-23-drop-windows-support-design.md  2026-04-23-multi-platform-release-design.md
frontend/: index.html  overlay.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  ThemeContext.tsx  main.tsx  overlay.css  overlay.test.ts  overlay.transitions.test.tsx  overlay.tsx  theme.ts
frontend/src/components/: Layout.tsx  ProviderPresetSelector.tsx  StatusIndicator.test.tsx  StatusIndicator.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  index.ts
frontend/src/config/: modelPresets.ts
frontend/src/hooks/: useConfigForm.test.ts  useConfigForm.ts  useModelManager.ts  useTauri.ts
frontend/src/i18n/: index.ts
frontend/src/pages/: History.tsx  Home.tsx  Settings.tsx
frontend/src/styles/: components.css  design-system.css  design-tokens.css  global.css  layout.css  motion.css  overlay-base.css
frontend/src/styles/components/: status-indicator.css  ui-primitives.css
frontend/src/styles/pages/: history.css  home.css  settings.css
frontend/src/utils/: clipboard.ts
msi/: Product.wxs
packaging/appimage/: AppRun.in  Dockerfile.aarch64  altgo.desktop.in  appimage-builder.yml  build.sh
packaging/aur/: PKGBUILD.in  generate-pkgbuild.sh
packaging/flatpak/: com.github.altgo.yml
packaging/scripts/: build.ps1  download-deps-windows.ps1  download-deps.ps1  download-deps.sh  extract-release-notes.sh  versions.json  versions.sh
plan/: 2026-04-16-fix-linux-clippy.md
resources/prompts/: base.txt  heavy-suffix.txt  light-suffix.txt  medium-suffix.txt
scripts/: download-deps.ps1  download-deps.sh
src/: audio.rs  config.rs  key_listener.rs  lib.rs  main.rs  model.rs  output.rs  pipeline.rs  polisher.rs  recorder.rs  resource.rs  state_machine.rs  transcriber.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  cmd.rs  config.rs  config_store.rs  error.rs  history.rs  key_capture.rs  lib.rs  main.rs  model.rs  overlay_manager.rs  overlay_window.rs  pipeline.rs  pipeline_builder.rs  pipeline_command_handler.rs  pipeline_context.rs  pipeline_controller.rs  pipeline_event_handler.rs  pipeline_orchestrator.rs  pipeline_sink.rs  polisher.rs  prompt_store.rs  resource.rs  state_machine.rs  tauri_overlay_window.rs  tauri_sink.rs  thread_config.rs  transcriber.rs  tray.rs  voice_pipeline.rs  whisper_server.rs
src-tauri/src/key_capture/: windows.rs
src-tauri/src/key_listener/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/output/: linux.rs  macos.rs  mod.rs  windows.rs  windows_recording.ps1
src-tauri/src/overlay/: manager.rs  mod.rs  seam.rs  tauri.rs
src-tauri/src/polisher/: protocol.rs
src-tauri/src/recorder/: dsp.rs  linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/voice_pipeline/: builder.rs  context.rs  dispatcher.rs  handlers.rs  mod.rs  sink.rs  test_doubles.rs
src/gui/: app.rs  i18n.rs  mod.rs  state.rs  tray.rs
src/key_listener/: linux.rs  macos.rs  mod.rs  windows.rs
src/output/: linux.rs  macos.rs  mod.rs  windows.rs  windows_notify.ps1  windows_result.ps1
src/recorder/: linux.rs  macos.rs  mod.rs  windows.rs
