[package]
name = "altgo"
version = "0.1.0"
edition = "2021"
description = "无需打字，言出法随 — 跨平台语音转文字工具"

[package.metadata.deb]
name = "altgo"
maintainer = "altgo"
section = "Utility"
priority = "optional"
homepage = "https://github.com/ouyangjiahong/altgo"

[profile.release]
# On Windows, link as GUI subsystem to avoid console window.
# This only applies to the GUI build which uses eframe.
lto = true
opt-level = 3

[features]
default = []
gui = ["egui", "eframe", "tao", "once_cell", "png"]

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"
tempfile = "3"

# GUI dependencies
egui = { version = "0.29", optional = true }
eframe = { version = "0.29", optional = true, default-features = false, features = ["default_fonts", "glow"] }
tao = { version = "0.16.11", optional = true, features = ["tray"] }
once_cell = { version = "1.19", optional = true }
png = { version = "0.17", optional = true }

[dev-dependencies]
mockito = "1"
serde_json = "1"
