[package]
name = "altgo"
version = "1.1.0"
edition = "2021"
description = "无需打字，言出法随 — 跨平台语音转文字工具"
homepage = "https://github.com/cislunarspace/altgo"

[package.metadata.deb]
name = "altgo"
maintainer = "cislunarspace"
section = "Utility"
priority = "optional"
depends = "libasound2, libspeechd2"
assets = [
    ["target/release/altgo", "usr/bin/", "755"],
    ["configs/altgo.toml", "etc/altgo/altgo.toml", "644"],
    ["target/deps/bin/whisper-cli", "usr/lib/altgo/bin/", "755"],
    ["target/deps/bin/ffmpeg", "usr/lib/altgo/bin/", "755"],
]

[lib]
name = "altgo"
path = "src/lib.rs"

[[bin]]
name = "altgo"
path = "src/bin/cli.rs"

[profile.release]
lto = true
opt-level = 3

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["macros", "sync", "time", "rt-multi-thread", "process"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"
tempfile = "3"
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[dev-dependencies]
mockito = "1"
serde_json = "1"
