[package]
name = "altgo-tauri"
version = "1.4.0"
edition = "2021"
description = "altgo Tauri desktop application"

[lib]
name = "altgo_tauri"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "sync", "time", "rt-multi-thread", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
dirs = "5"
tempfile = "3"
futures-util = "0.3"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
clap = { version = "4", features = ["derive"] }
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[dev-dependencies]
mockito = "1"
serde_json = "1"
