[package]
name = "altgo-tauri"
version = "2.4.5"
edition = "2021"
description = "altgo Tauri desktop application"

[lib]
name = "altgo_tauri"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "altgo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "test"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "sync", "time", "rt-multi-thread", "process"] }
tracing = "0.1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
dirs = "5"
futures-util = "0.3"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
regex = "1"
thiserror = "1"
rubato = { version = "0.16", default-features = false }
base64 = "0.22"

[dev-dependencies]
mockito = "1"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
] }
cpal = "0.17"
arboard = { version = "3", default-features = false }
